--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- jQuery 라이브러리 -->
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
+    <!-- Font Awesome 아이콘 -->
     <script
       src="https://kit.fontawesome.com/2153d98071.js"
       crossorigin="anonymous"
@@ -24,5 +26,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- React 애플리케이션이 렌더링될 위치 -->
   </body>
 </html>
